<?xml version="1.0"?>
<package>
  <name>fira6_description</name>
  <version>0.0.0</version>
  <description>The fira6_description package</description>

  <maintainer email="jianming1481@gmail.com">jianming</maintainer>

  <license>BSD</license>
  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
